# Plugin-Nesventory-LLM

./: .dockerignore  .gitignore  =3.0.1  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml
Village/: index.html
Village/Village Collection/: index.html
Village/Village Collection/hts-cache/: new.lst  winprofile.ini
Village/Village Collection/thevillagechronicler.com/: ALP-ProductList.html  AdaptersAndBulbs.html  CIC-ProductList.html  CL-ProductList.html  ContactUs.html  DV-ProductList.html  EXCL-ProductList.html  FIG-ProductList.html  Family Tree.html  GVA-ProductList.html  Glossary.html  Index.html  MissingPictures.html  NEV-ProductList.html  NP-ProductList.html  NewIntroductions.html  ORN-ProductList.html  OSV-ProductList.html  OurSources.html  OurUserTestimonials.html  ProductAdapterList.html  ReferenceLists.html  Retirements.html  SVH-ProductList.html  SortedProductLists.html  TheAlbum.html  TheAlmanac.html  TheArchives.html  TheCatalog.html  TheChronicler.html  TheCollections.html  TheDiary.html  TheFigurines.html  TheLegend.html  TheRecord.html  TheStacks.html  Tips.html  find5-3.js  index-2.html
Village/retiredproducts.department56.com/: index.html  robots.txt
Village/retiredproducts.department56.com/collections/: a-christmas-story-village.html  accessory.html  alpine-village.atom  alpine-village.html  alpine-village.oembed  american-pride-collection.html  annual-dated-items.html  antique-toy-chest.html  anyone.html  baby.html  bears.html  bon-appetit.html  box.html  by-the-sea.html  candle-holder-without-candle.html  candy-themed-gifts.html  celtic-holiday.html  christmas.html  (+115 more)
Village/thevillagechronicler.com/: ALP-ProductList.shtml.html  AdaptersAndBulbs.shtml.html  CIC-ProductList.shtml.html  CL-ProductList.shtml.html  ContactUs.shtml.html  DV-ProductList.shtml.html  EXCL-ProductList.shtml.html  FIG-ProductList.shtml.html  Family Tree.shtml.html  GVA-ProductList.shtml.html  Glossary.shtml.html  Index.shtml.html  MissingPictures.shtml.html  NEV-ProductList.shtml.html  NP-ProductList.shtml.html  NewIntroductions.shtml.html  ORN-ProductList.shtml.html  OSV-ProductList.shtml.html  OurSources.shtml.html  OurUserTestimonials.shtml.html  ProductAdapterList.shtml.html  ReferenceLists.shtml.html  Retirements.shtml.html  SVH-ProductList.shtml.html  SortedProductLists.shtml.html  TheAlbum.shtml.html  TheAlmanac.shtml.html  TheArchives.shtml.html  TheCatalog.shtml.html  TheChronicler.shtml.html  TheCollections.shtml.html  TheDiary.shtml.html  TheFigurines.shtml.html  TheLegend.shtml.html  TheRecord.shtml.html  TheStacks.shtml.html  Tips.shtml.html  find5.js  gs_sortable.js
data/: .gitkeep  catalog.csv.example
docs/: ERROR_CODES.md  VISION_ENHANCEMENTS.md
scripts/: build_catalog_embeddings.py
src/plugin_nesventory_llm/: __init__.py  api.py  cli.py  image_search.py  knowledge_base.py  models.py  scraper.py  seed_data.py
tests/: __init__.py  test_api.py  test_api_error_messages.py  test_image_search.py  test_models.py  test_scraper.py  test_seed_data.py
(+10661 files in other folders)
